<resources>
    <string name="app_name">DeamHome</string>

    <!-- all -->
    <string name="all_network_check_please_message">인터넷 연결을 확인해주세요</string>
    <string name="all_back_key_check_message">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>

    <string name="all_snackbar_default_action">확인</string>
    <string name="bottom_navigation_home">홈</string>
    <string name="bottom_navigation_search">검색</string>
    <string name="bottom_navigation_category">카테고리</string>
    <string name="bottom_navigation_cart">장바구니</string>
    <string name="bottom_navigation_my_page">마이페이지</string>
    <string name="signup">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="nickname">닉네임</string>
    <string name="phone">전화번호</string>
    <string name="login">로그인</string>
    <string name="account_search">계정조회</string>
    <string name="easy_social_login">간편 로그인</string>
    <string name="id_save">아이디 저장</string>


</resources>