<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/bottom_navigation_home" />
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/bottom_navigation_search" />
    <item
        android:id="@+id/menu_item_category"
        android:icon="@drawable/ic_category_24"
        android:title="@string/bottom_navigation_category" />
    <item
        android:id="@+id/menu_item_cart"
        android:icon="@drawable/ic_shopping_cart_24"
        android:title="@string/bottom_navigation_cart" />
    <item
        android:id="@+id/menu_item_my_page"
        android:icon="@drawable/ic_my_page_24"
        android:title="@string/bottom_navigation_my_page" />
</menu>
