<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_FFFFFF"
        tools:context=".presentation.auth.signup.SignUpActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tlb_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/signup">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/black_000000"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:id="@+id/sv_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_sighup_send"
            app:layout_constraintTop_toBottomOf="@id/tlb_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_start"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="68dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_end"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="68dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_nickname"
                    style="@style/SignUpTextInputOutlinedBoxLayout"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:hint="@string/nickname"
                    android:paddingTop="0dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:expandedHintEnabled="false"
                    app:helperText="추후 변경가능합니다"
                    app:hintTextAppearance="@style/HintTextAppearance"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etv_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingVertical="6dp"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_id"
                    style="@style/SignUpTextInputOutlinedBoxLayout"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:hint="@string/id"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:helperText="20자 이내"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@id/til_nickname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etv_id"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingVertical="6dp"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_pwd"
                    style="@style/SignUpTextInputOutlinedBoxLayout"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:hint="@string/password"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:endIconMode="password_toggle"
                    app:helperText="15자 이내"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@id/til_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etv_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingVertical="6dp"
                        android:text="adfs"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_pwd_confirm"
                    style="@style/SignUpTextInputOutlinedBoxLayout"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:hint="@string/password_confirm"
                    app:endIconMode="password_toggle"
                    app:helperText="비밀번호를 재입력해주세요"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@id/til_pwd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etv_pwd_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:paddingVertical="6dp"
                        android:text="adfs"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/SignUpTextInputOutlinedBoxLayout"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:hint="@string/email"
                    app:helperText="이메일을 입력해주세요"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@id/til_pwd_confirm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etv_email_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingVertical="6dp"
                        android:text="adfs"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <include
                    android:id="@+id/dv_under_email"
                    layout="@layout/view_divider_with_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginHorizontal="52dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/til_email"
                    bind:backgroundColor="@{@color/white_FFFFFF}"
                    bind:text="@{@string/phone}" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_phone"
                    style="@style/SignUpTextInputFilledBoxLayout"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:paddingTop="4dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toBottomOf="@id/dv_under_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etv_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:hint="- 를 제외하고 입력해주세요"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:paddingVertical="6dp"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sighup_send"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/vista_blue_80A1D4"
            android:text="@string/signup"
            android:textColor="@color/white_FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>